fix: change header z-index

--- a/src/assets/styles/global/style.scss
+++ b/src/assets/styles/global/style.scss
@@ -60,6 +60,9 @@ ul {
 
 .no-scroll {
   overflow: hidden;
+  .header {
+    z-index: 6;
+  }
   .modal {
     &__overlay {
       z-index: 6;
